--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -9,7 +9,7 @@
 			</div>
 			<div class="large-6 columns text-center">
 				{% placeholder call_to_action_2 %}
-				<a href="#" class="button">Inscreva-se</a>
+				<a href="#" class="button secondary">Inscreva-se</a>
 			</div>
 		</div>
 	</div>
