Adicionei cadastro de usuários
Incluí os templates básicos e instalei tudo conforme a documentação. Os settings continuam o padrão

--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -8290,3 +8290,8 @@ form.search-form {
 .hero-button:hover, .hero-button:focus {
   color: white;
 }
+
+/* line 201, ../sass/app.scss */
+.button.full-width {
+  width: 100%;
+}
