--- a/website/templates/website/templatetags/render_user_bar.html
+++ b/website/templates/website/templatetags/render_user_bar.html
@@ -1,7 +1,9 @@
+{% load i18n %}
+
 {% if user.is_authenticated %}
 	<div class="row">
 		<div class="large-12 columns">
-			<span>Olá, {{user_name}} | <a href="{% url "logout" %}">Sair</a></span>
+			<span class="right">{{user.get_full_name}} | <a href="{% url "logout" %}">{% trans "Sair" %}</a></span>
 		</div>
 	</div>
 {% endif %}
