--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -40,7 +40,22 @@
 			{% render_sponsors %}
 			<footer>
 				<hr>
-				{% placeholder footer %}
+				<div class="row">
+					<div class="medium-4 columns text-center">
+						<h2>Realização</h2>
+					</div>
+					<div class="medium-4 columns text-center">
+						<h2>Contato</h2>
+						<ul class="no-bullet">
+							<li>+55 (16) xxxx-xxxx</li>
+							<li>+55 (16) xxxx-xxxx</li>
+							<li><a href="mailto:semcomp@icmc.usp.br">semcomp@icmc.usp.br</a></li>
+						</ul>
+					</div>
+					<div class="medium-4 columns text-center">
+						<h2>Siga-nos</h2>
+					</div>
+				</div>
 			</footer>
 		</section>
 		{% render_block "js" postprocessor "compressor.contrib.sekizai.compress" %}
