--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -1,203 +1,109 @@
+@import "settings";
+@import "localsettings";
+@import "foundation";
 @import "compass";
 
-// Global Foundation Settings
-@import "settings";
+@import url("//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
 
-//$topbar-bg: rgba(white, 0.0);
-$topbar-margin-bottom: 20px;
-//$body-bg: image-url('new-pattern.png');
-//$topbar-dropdown-bg: rgba(white, 0.0);
-$side-nav-list-margin: em-calc(0 0 0 0);
-$side-nav-font-size: em-calc(16);
-$side-nav-padding: em-calc(0);
+$main-menu-width: 150px;
+$header-height: 100px;
+$header-offset: $header-height + 10px;
 
-$primary-color: #01507D;
-$bg: lighten($primary-color, 10%);
+body {
+    background-color: #004F78;
+}
 
-// Comment out this import if you don't want to use normalize
-@import "normalize";
+.menu-wrap {
+    height: 70px;
+    overflow: visible;
+    width: 100%;
+    background-color: #eee;
 
-// Comment out this import if you are customizing you imports below
-@import "foundation";
+    position: fixed;
+    top: 0px;
 
-// Import specific parts of Foundation by commenting the import "foundation"
-// and uncommenting what you want below. You must uncomment the following if customizing
+    z-index: 10;
+}
 
-// @import "foundation/components/global"; // *always required
-// @import "foundation/components/grid";
+.menu-topo {
+    background-image: url($static_dir + "img/header.png");
+    background-repeat: no-repeat;
+    background-position: center top;
 
-//
-// Use this grid if you want to start using the new Foundation 5 grid early.
-// It will change breakpoints to min-width: 640px and 1024px.
-//
-// @import "foundation/components/grid-5";
-//
+    text-transform: uppercase;
 
-// @import "foundation/components/visibility";
-// @import "foundation/components/block-grid";
-// @import "foundation/components/type";
-// @import "foundation/components/buttons";
-// @import "foundation/components/forms"; // *requires components/buttons
-// @import "foundation/components/custom-forms"; // *requires components/buttons, components/forms
-// @import "foundation/components/button-groups"; // *requires components/buttons
-// @import "foundation/components/dropdown-buttons"; // *requires components/buttons
-// @import "foundation/components/split-buttons"; // *requires components/buttons
-// @import "foundation/components/flex-video";
-// @import "foundation/components/section";
-// @import "foundation/components/top-bar";  // *requires components/grid
-// @import "foundation/components/orbit";
-// @import "foundation/components/reveal";
-// @import "foundation/components/joyride";
-// @import "foundation/components/clearing";
-// @import "foundation/components/alert-boxes";
-// @import "foundation/components/breadcrumbs";
-// @import "foundation/components/keystrokes";
-// @import "foundation/components/labels";
-// @import "foundation/components/inline-lists";
-// @import "foundation/components/pagination";
-// @import "foundation/components/panels";
-// @import "foundation/components/pricing-tables";
-// @import "foundation/components/progress-bars";
-// @import "foundation/components/side-nav";
-// @import "foundation/components/sub-nav";
-// @import "foundation/components/switch";
-// @import "foundation/components/magellan";
-// @import "foundation/components/tables";
-// @import "foundation/components/thumbs";
-// @import "foundation/components/tooltips";
-// @import "foundation/components/dropdown";
+    ul {
+      list-style-type: none;
+      margin: 0;
+    }
+    li {
+      display: inline-block;
+      width: $main-menu-width
+    }
+    img {
+        margin: 10px;
+        height: 80px;
+    }
+}
 
 .hero {
-	background-color: $primary-color;
-	padding: 20px;
-	margin: 20px 0;
+    padding-top: $header-height;
+    background: url($static_dir + "img/hero-background.jpg") no-repeat center center fixed;
+    background-size: cover;
+
+    > h1 {
+        font-weight: 700;
+        font-size: 400%;
+    }
+    > h1,h2 {
+        color: #eee;
+    }
+    > h2 {
+        padding-bottom: 8rem;
+    }
 }
 
-.sponsor {
-	padding-top: 5px;
-	padding-bottom: 5px;
+.media-icons {
+    > a {
+        color: #222;
+    }
+    padding: 20px;
 }
 
-@function menu-item-width($total-width, $num-items) {
-	@return $total-width / $num-items;
+.sponsors {
+    background-color: #003E5E;
+}
+.partners {
+    background-color: #005785;
 }
 
-@media #{$topbar-media-query} {
-	.top-bar-section > ul > li {
-		text-align: center;
-		width: menu-item-width(100%, 5);
-		border-right: lighten($topbar-bg, 10%) 1px solid;
-		border-left: lighten($topbar-bg, 10%) 1px solid;
-
-		&:first-child {
-			border-left: none;
-		}
-		&:last-child {
-			border-right: none;
-		}
-	}
-	.top-bar-section ul, .top-bar {
-		background: transparent;
-	}
+.sponsors,.partners {
+    padding-bottom: 25px;
 }
 
-//li.selected > a { background-color: #fab !important; }
+.grid-logo {
+    background: white;
+    border-radius: 20px;
+    padding: 1.25rem;
+    
+    li {
+        line-height: 100px;
+        height: 100px;
+        vertical-align: middle;
+        text-align: center;
 
-.side-nav li {
-	//line-height: 200%;
-	padding: 10px;
-	//&.active {
-	//	background-color: cadetblue;
-	//}
+        a {
+            padding: 10px;
+            display: block;
+        }
+        img {
+            max-height: 100px;
+        }
+    }
 }
 
-span.align-center img {
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
-}
-
-.user-content h1 {
-	@include background-image(linear-gradient(right, white, #015079));
-	@extend .text-right;
-}
-
-#add-place-map {
-	height: 380px;
-}
-
-.schedule {
-	width: 100%;
-	height: 100%;
-	th {
-		text-align: center;
-	}
-	td {
-		width: 14.285714285714286%;
-		text-align: center;
-
-		border-right: #ddd 1px dotted;
-		height: 100%;
-		padding: 0;
-	}
-}
-
-.day-schedule {
-	width: 100%;
-	height: 600px;
-	position: relative;
-
-	//border: #ddd 1px dotted;
-	//border-right: #ddd 1px dotted;
-}
-
-.schedule-event {
-	@include border-radius(5px);
-
-	position: absolute;
-
-	&.neutro {
-		background-color: lightgray;
-	}
-
-	&.minicurso {
-		background-color: lightgreen;
-	}
-
-	&.palestra {
-		background-color: lightblue;
-	}
-}
-
-.timeslots {
-	padding: 0;
-
-	.schedule-timeslot {
-		height: 20px;
-		line-height: 20px;
-
-		&:nth-child(even) {
-			border-bottom: 1px lightgray solid;
-		}
-
-		&:first-child {
-			border-top: 1px lightgray solid;
-		}
-	}
-}
-
-.picker__footer button {
-	color: black;
-}
-
-form.search-form {
-	margin: 0;
-}
-
-.hero-button {
-	@include button($bg:lighten($primary-color,10%));
-}
-
-.button.full-width {
-    width: 100%;
+footer {
+    background-color: #002538;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
 }
