--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -1,25 +1,24 @@
 {% load cms_tags sekizai_tags static menu_tags semcomp %}
 <!doctype html>
-<html class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage no-websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients no-cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths">
+<html class="no-js">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Semcomp{% endblock %}</title>
-		{% render_block "css" postprocessor "compressor.contrib.sekizai.compress" %}
-		{% addtoblock "css" %}
-			<link rel="stylesheet" href="{% static "css/app.css" %}">
-			<!--<link rel="stylesheet" href=" static "stylesheets/app.css"" />-->
-    		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"/>
-			{% block extracss %}
-		{% endblock %}
-		{% endaddtoblock %}
-    
+    {% render_block "css" postprocessor "compressor.contrib.sekizai.compress" %}
+    {% addtoblock "css" %}
+      <link rel="stylesheet" href="{% static "css/app.css" %}">
+      <!--<link rel="stylesheet" href=" static "stylesheets/app.css"" />-->
+      <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"/>
+      {% block extracss %}
+      {% endblock %}
+    {% endaddtoblock %}
     <script src="{% static "bower_components/modernizr/modernizr.js" %}"></script>
   </head>
   <body>
-  {% cms_toolbar %}
-  <header>
-  	<div class="menu-wrap">
+    {% cms_toolbar %}
+    <header>
+      <div class="menu-wrap">
         <div class="row text-center menu-topo">
           <nav>
             <ul>
@@ -32,63 +31,73 @@
           </nav>
         </div>
       </div>
-    {% block header %} {% endblock %}
+      {% block header %} {% endblock %}
     </header>
+
     {% block base_content %}{% endblock %}
-    
 
     {% render_sponsors %}
 
     {% block rodape %}
-    <footer>
-      <div class="row text-center">
-        <div class="large-4 columns">
-          <div class="panel">
-            <h1>FAQ</h1>
+      <footer>
+        <div class="row text-center">
+          <div class="large-4 columns">
+            <div class="panel">
+              <h1>FAQ</h1>
+            </div>
+
+            <h1>Realização</h1>
+              <img src="{% static "img/organizacao.png" %}">
+            </div>
+
+            <div class="large-4 columns">
+              <h1>Contato</h1>
+              <form>
+                <input type="text" placeholder="Nome">
+                <input type="text" placeholder="E-mail">
+                <textarea placeholder="Mensagem..."></textarea>
+
+                <input class="button expand" type="submit" value="Enviar">
+              </form>
+            </div>
+
+            <div class="large-4 columns">
+              <div class="panel">
+                <h1>Bla?</h1>
+              </div>
+
+              <p class="media-icons">
+                <a href="https://facebook.com/semcomp17">
+                  <span class="fa-stack fa-2x">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-inverse fa-facebook fa-stack-1x"></i>
+                  </span>
+                </a>
+                <a href="https://twitter.com/semcomp">
+                  <span class="fa-stack fa-2x">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-inverse fa-twitter fa-stack-1x"></i>
+                  </span>
+                </a>
+                <a href="https://plus.google.com/+semcomp">
+                  <span class="fa-stack fa-2x">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-inverse fa-google-plus fa-stack-1x"></i>
+                  </span>
+                </a>
+              </p>
+            </div>
           </div>
-
-          <h1>Realização</h1>
-          <img src="{% static "img/organizacao.png" %}">
         </div>
-
-        <div class="large-4 columns">
-          <h1>Contato</h1>
-          <form>
-            <input type="text" placeholder="Nome">
-            <input type="text" placeholder="E-mail">
-            <textarea placeholder="Mensagem..."></textarea>
-
-            <input class="button expand" type="submit" value="Enviar">
-          </form>
-        </div>
-
-        <div class="large-4 columns">
-          <div class="panel">
-            <h1>Bla?</h1>
-          </div>
-
-          <p class="media-icons">
-            <a href="https://facebook.com/semcomp17">
-              <span class="fa-stack fa-2x"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-inverse fa-facebook fa-stack-1x"></i>
-            </a>
-            <a href="https://twitter.com/semcomp">
-              <span class="fa-stack fa-2x"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-inverse fa-twitter fa-stack-1x"></i>
-            </a>
-            <a href="https://plus.google.com/+semcomp">
-              <span class="fa-stack fa-2x"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-inverse fa-google-plus fa-stack-1x"></i>
-            </a>
-          </p>
-
-        </div>
-      </div>
-    </footer>
+      </footer>
     {% endblock %}
+
     {% render_block "js" postprocessor "compressor.contrib.sekizai.compress" %}
-		{% addtoblock "js" %}
-    	<script src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
-    	<script src="{% static "bower_components/foundation/js/foundation.min.js" %}"></script>
-    	<script src="{% static "js/app.js" %}"></script>
-    	{% block extrajs %}{% endblock %}
-	{% endaddtoblock %}
+    {% addtoblock "js" %}
+      <script src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
+      <script src="{% static "bower_components/foundation/js/foundation.min.js" %}"></script>
+      <script src="{% static "js/app.js" %}"></script>
+      {% block extrajs %}{% endblock %}
+    {% endaddtoblock %}
   </body>
 </html>
