implementa o menu do usuário
a versão 3 do django-cms usa um código diferente pra fazer menus:
http://django-cms.readthedocs.org/en/3.0.1/extending_cms/app_integration.html#navigation-modifiers

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -1,5 +1,5 @@
 {% extends "website/base.html" %}
-{% load cms_tags semcomp %}
+{% load cms_tags menu_tags semcomp %}
 
 {% block header %}
   <div class="hero text-center">
