--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -22,11 +22,14 @@
         <div class="row text-center menu-topo">
           <nav>
             <ul>
+			<!--
               <li><a href="#">Programação</a></li>
               <li><a href="#">Local</a></li>
               <li><a href="#"><img src="{% static "img/logo-semcomp.png" %}"></a></li>
               <li><a href="#">Contato</a></li>
               <li><a href="#">Entrar</a></li>
+			-->
+              {% show_menu %}
             </ul>
           </nav>
         </div>
