--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -30,65 +30,67 @@
 {% endblock %}
 
 {% block base_content %}
-  <div class="row">
-    <div class="large-8 columns">
-      <div class="panel">
-        <h2>O evento</h2>
-        <p>Oi cara eu tô num painel, daora</p>
+  <main>
+    <div class="row">
+      <div class="large-8 columns">
+        <div class="panel">
+          <h2>O evento</h2>
+          <p>Oi cara eu tô num painel, daora</p>
+        </div>
+      </div>
+      <div class="large-4 columns">
+        <div class="panel">
+          <h2>Notícias</h2>
+          <ul>
+            <li>Sonic derrota Mario</li>
+            <li>Alice é pega com estoque de cogumelos</li>
+            <li>Império de Bydo se reconstrói</li>
+            <li>Darth Vader em negociações secretas</li>
+          </ul>
+        </div>
       </div>
     </div>
-    <div class="large-4 columns">
-      <div class="panel">
-        <h2>Notícias</h2>
-        <ul>
-          <li>Sonic derrota Mario</li>
-          <li>Alice é pega com estoque de cogumelos</li>
-          <li>Império de Bydo se reconstrói</li>
-          <li>Darth Vader em negociações secretas</li>
-        </ul>
-      </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="large-4 columns">
-      <div class="panel">
-        <h2>Local</h2>
-        <p>Oi cara eu tô num painel, supimpa</p>
+    <div class="row">
+      <div class="large-4 columns">
+        <div class="panel">
+          <h2>Local</h2>
+          <p>Oi cara eu tô num painel, supimpa</p>
+        </div>
+        <div class="panel">
+          <h2>Datas importantes</h2>
+          <p>Oi cara eu tô num painel, supimpa</p>
+        </div>
       </div>
-      <div class="panel">
-        <h2>Datas importantes</h2>
-        <p>Oi cara eu tô num painel, supimpa</p>
+      <div class="large-8 columns">
+        <div class="panel">
+          <h2>Palestras e minicursos</h2>
+          <p>Eu sou um super painel muito louco mesmo cheio das palestras e hip hop</p>
+          <p>Também tenho conteúdo mais uhu que antes uhu, olhaí</p>
+          <p>Links das palestras e tal</p>
+          <p>Caixinhas com minicursos também</p>
+        </div>
       </div>
     </div>
-    <div class="large-8 columns">
-      <div class="panel">
-        <h2>Palestras e minicursos</h2>
-        <p>Eu sou um super painel muito louco mesmo cheio das palestras e hip hop</p>
-        <p>Também tenho conteúdo mais uhu que antes uhu, olhaí</p>
-        <p>Links das palestras e tal</p>
-        <p>Caixinhas com minicursos também</p>
-      </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="large-4 columns">
-      <div class="panel">
-        <h2>E mais...</h2>
-        <ul>
-          <li>Game night</li>
-          <li>Sarau</li>
-          <li>Vodka</li>
-        </ul>
+    <div class="row">
+      <div class="large-4 columns">
+        <div class="panel">
+          <h2>E mais...</h2>
+          <ul>
+            <li>Game night</li>
+            <li>Sarau</li>
+            <li>Vodka</li>
+          </ul>
+        </div>
+      </div>
+      <div class="large-8 columns">
+        <div class="panel">
+          <h2>Feira de recrutamento</h2>
+          <p>Você vem pra feira e sai com emprego garantido!</p>
+        </div>
       </div>
     </div>
-    <div class="large-8 columns">
-      <div class="panel">
-        <h2>Feira de recrutamento</h2>
-        <p>Você vem pra feira e sai com emprego garantido!</p>
-      </div>
-    </div>
-  </div>
+  </main>
 {% endblock %}
 
