--- a/website/static/sass/_localsettings.scss
+++ b/website/static/sass/_localsettings.scss
@@ -2,4 +2,4 @@ $static_dir: "/static/";
 
 $body-font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 $body-font-color: #eee;
-$header-font-color: #efefef;
+$header-font-color: #222;
