--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -103,7 +103,7 @@ body {
 }
 
 footer {
-    background-color: #002538;
+    background-color: #eee;
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
 }
