Usa ladrilhos com dimensões proporcionais à largura
Cada ladrilho da página principal agora tem uma altura mínima fixa,
dando uma impressão de que a página principal é um grande e bonito LEGO.

Cada ladrilho tem uma relação largura:altura de 2:1 ou 1:1

--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -63,6 +63,12 @@ body {
     }
 }
 
+@for $i from 1 through $total-columns {
+	.tile-height-#{$i} {
+		min-height: ($i / $total-columns) * $row-width - $column-gutter;
+	}
+}
+
 .media-icons {
     > a {
         color: #222;
