--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -30,16 +30,16 @@
 {% endblock %}
 
 {% block base_content %}
-  <main>
+  <main class="home">
     <div class="row">
       <div class="large-8 columns">
-        <div class="panel">
+        <div class="panel tile-height-4">
           <h2>O evento</h2>
           <p>Oi cara eu tô num painel, daora</p>
         </div>
       </div>
       <div class="large-4 columns">
-        <div class="panel">
+        <div class="panel tile-height-4">
           <h2>Notícias</h2>
           <ul>
             <li>Sonic derrota Mario</li>
@@ -53,17 +53,17 @@
 
     <div class="row">
       <div class="large-4 columns">
-        <div class="panel">
+        <div class="panel tile-height-4">
           <h2>Local</h2>
           <p>Oi cara eu tô num painel, supimpa</p>
         </div>
-        <div class="panel">
+        <div class="panel tile-height-4">
           <h2>Datas importantes</h2>
           <p>Oi cara eu tô num painel, supimpa</p>
         </div>
       </div>
       <div class="large-8 columns">
-        <div class="panel">
+        <div class="panel tile-height-8">
           <h2>Palestras e minicursos</h2>
           <p>Eu sou um super painel muito louco mesmo cheio das palestras e hip hop</p>
           <p>Também tenho conteúdo mais uhu que antes uhu, olhaí</p>
@@ -75,7 +75,7 @@
 
     <div class="row">
       <div class="large-4 columns">
-        <div class="panel">
+        <div class="panel tile-height-4">
           <h2>E mais...</h2>
           <ul>
             <li>Game night</li>
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="large-8 columns">
-        <div class="panel">
+        <div class="panel tile-height-4">
           <h2>Feira de recrutamento</h2>
           <p>Você vem pra feira e sai com emprego garantido!</p>
         </div>
