Adiciona placeholders na página principal
Cada ladrilho da página principal agora tem um placeholder, não tem
nenhum conteúdo padrão, o conteúdo vai vir direto da colaboração das
pessoas que vão usar o site

No rodapé foram colocados "static placeholders", que mantém o mesmo
conteúdo em todas as páginas (porque no rodapé não faz sentido ter
coisas que mudam de acordo com a página, ia ser uma zona)

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -34,19 +34,12 @@
     <div class="row">
       <div class="large-8 columns">
         <div class="panel tile-height-4">
-          <h2>O evento</h2>
-          <p>Oi cara eu tô num painel, daora</p>
+          {% placeholder "evento" %}
         </div>
       </div>
       <div class="large-4 columns">
         <div class="panel tile-height-4">
-          <h2>Notícias</h2>
-          <ul>
-            <li>Sonic derrota Mario</li>
-            <li>Alice é pega com estoque de cogumelos</li>
-            <li>Império de Bydo se reconstrói</li>
-            <li>Darth Vader em negociações secretas</li>
-          </ul>
+          {% placeholder "noticias" %}
         </div>
       </div>
     </div>
@@ -54,21 +47,15 @@
     <div class="row">
       <div class="large-4 columns">
         <div class="panel tile-height-4">
-          <h2>Local</h2>
-          <p>Oi cara eu tô num painel, supimpa</p>
+          {% placeholder "local" %}
         </div>
         <div class="panel tile-height-4">
-          <h2>Datas importantes</h2>
-          <p>Oi cara eu tô num painel, supimpa</p>
+          {% placeholder "datas_importantes" %}
         </div>
       </div>
       <div class="large-8 columns">
         <div class="panel tile-height-8">
-          <h2>Palestras e minicursos</h2>
-          <p>Eu sou um super painel muito louco mesmo cheio das palestras e hip hop</p>
-          <p>Também tenho conteúdo mais uhu que antes uhu, olhaí</p>
-          <p>Links das palestras e tal</p>
-          <p>Caixinhas com minicursos também</p>
+          {% placeholder "palestras_minicursos" %}
         </div>
       </div>
     </div>
@@ -76,18 +63,12 @@
     <div class="row">
       <div class="large-4 columns">
         <div class="panel tile-height-4">
-          <h2>E mais...</h2>
-          <ul>
-            <li>Game night</li>
-            <li>Sarau</li>
-            <li>Vodka</li>
-          </ul>
+          {% placeholder "extras" %}
         </div>
       </div>
       <div class="large-8 columns">
         <div class="panel tile-height-4">
-          <h2>Feira de recrutamento</h2>
-          <p>Você vem pra feira e sai com emprego garantido!</p>
+          {% placeholder "feira_recrutamento" %}
         </div>
       </div>
     </div>
