Usa a tag <main> pra ter espaço antes do conteúdo
A tag main agora está presente em todas as páginas, e ela é usada pra
manter o conteúdo do site 100px abaixo da parte de cima da tela, pra
pular todo o menu fixo da parte de cima

nota: quando o modo de edição do django-cms está ativado, vai parecer
que o conteúdo está pra baixo demais, mas não está. recolher a barra do
django-cms vai mostrar que não está tão estranho assim

--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -46,6 +46,10 @@ body {
     }
 }
 
+main {
+    padding-top: 100px; //100px é o tamanho atual da imagem do topo
+}
+
 .hero {
     padding-top: $header-height;
     background: url($static_dir + "img/hero-background.jpg") no-repeat center center fixed;
