--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -34,7 +34,9 @@
       {% block header %} {% endblock %}
     </header>
 
-    {% block base_content %}{% endblock %}
+    <main class="home">
+      {% block base_content %}{% endblock %}
+    </main>
 
     {% render_sponsors %}
 
