--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -5,7 +5,7 @@
   <div class="hero text-center">
     <h1>17ª Semana da Computação<br>USP São Carlos</h1>
     <h2>De 18 a 22 de agosto de 2014</h2>
-    <a href="#" class="button radius">Inscreva-se!</a>
+	<iframe width="853" height="480" src="//www.youtube.com/embed/QQ7uVYVIgjE?rel=0" frameborder="0" allowfullscreen></iframe>
     <p class="media-icons">
       <a href="https://facebook.com/semcomp17">
         <span class="fa-stack fa-2x">
