--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -47,33 +47,24 @@
       <footer>
         <div class="row text-center">
           <div class="large-4 columns">
-            <div class="panel">
-              {% static_placeholder "faq" %}
-            </div>
-
             <h1>Realização</h1>
-              <img src="{% static "img/organizacao.png" %}">
+              <img class="realizacao" src="{% static "img/organizacao.png" %}" >
             </div>
 
             <div class="large-4 columns">
-              <h1>Contato</h1>
-              <form>
-                <input type="text" placeholder="Nome">
-                <input type="text" placeholder="E-mail">
-                <textarea placeholder="Mensagem..."></textarea>
+              <h1>Dúvidas?</h1>
+              <button class="button expand">Contato & FAQ</button>
+	      <ul class="semcomp-contatos">
+		  <li >Telefone 1: (16) 3373-9703</li>
+		  <li>Telefone 2: (16) 3373-9686</li>
+		  <li>E-mail: <a href="malito:semcomp@icmc.usp.br">semcomp@icmc.usp.br</a></li>
+	      </ul>
 
-                <input class="button expand" type="submit" value="Enviar">
-              </form>
-
-			  {% static_placeholder "contato" %}
+            {% static_placeholder "contato" %}
             </div>
 
             <div class="large-4 columns">
-              <div class="panel">
-                {% static_placeholder "rodape_extra" %}
-              </div>
-
-              <p class="media-icons">
+              <p class="media-icons-bottom">
                 <a href="https://facebook.com/semcomp17">
                   <span class="fa-stack fa-2x">
                     <i class="fa fa-circle fa-stack-2x"></i>
@@ -95,9 +86,27 @@
               </p>
             </div>
           </div>
-        </div>
-      </footer>
+
+     </footer>
     {% endblock %}
+        <div class="row rodape-link">
+         {% static_placeholder "mapa do site" %}
+             
+              <div class="large-12 columns">
+		  <ul>
+		      <p><a href="#">Programação&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		      <a href="#">Notícias&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		      <a href="#">Locais&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		      <a href="#">Riddle&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		      <a href="#">WICT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		      <a href="#">Patrocinadores&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		      <a href="#">Área de usuário&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		      <a href="#">Galeria&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		      <a href="#">Contato & FAQ</a>
+		     </p> 
+		  </ul>
+	      </div>
+        </div>
 
     {% render_block "js" postprocessor "compressor.contrib.sekizai.compress" %}
     {% addtoblock "js" %}
