--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -43,6 +43,24 @@
       </div>
     </div>
   </div>
+  
+  <div class="row"> 
+    <div class="large-4 columns">
+      <div class="panel tile-height-4">
+        {% placeholder "ver o nome1" %}
+      </div>
+    </div>
+    <div class="large-4 columns">
+      <div class="panel tile-height-4">
+        {% placeholder "ver o nome2" %}
+      </div>
+    </div>
+    <div class="large-4 columns">
+      <div class="panel tile-height-4">
+        {% placeholder "ver o nome3" %}
+      </div>
+    </div>
+  </div>
 
   <div class="row">
     <div class="large-4 columns">
