--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -38,7 +38,8 @@
     </div>
     <div class="large-4 columns">
       <div class="panel tile-height-4">
-        {% placeholder "noticias" %}
+        <!--{% placeholder "noticias" %}-->
+        <div style="width:261px;height:261px;text-align:center;margin:auto;" ><object width="261" height="261" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"  codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"> <param name="flashvars" value="offsite=true&amp;lang=en-us&amp;page_show_url=%2Fphotos%2Ficmc-usp%2Fsets%2F72157636792439686%2Fshow&amp;page_show_back_url=%2Fphotos%2Ficmc-usp%2Fsets%2F72157636792439686%2F&amp;set_id=72157636792439686" /> <param name="allowFullScreen" value="true" /> <param name="src" value="https://www.flickr.com/apps/slideshow/show.swf?v=71649" /> <embed width="261" height="261" type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=71649" flashvars="offsite=true&amp;lang=en-us&amp;page_show_url=%2Fphotos%2Ficmc-usp%2Fsets%2F72157636792439686%2Fshow&amp;page_show_back_url=%2Fphotos%2Ficmc-usp%2Fsets%2F72157636792439686%2F&amp;set_id=72157636792439686" allowFullScreen="true" /> </object><br /></div>
       </div>
     </div>
   </div>
